--- a/regist.html
+++ b/regist.html
@@ -8,6 +8,10 @@
     <meta name="format-detection" content="telephone=no, email=no" />
     <title>你的钱是怎么被骗走的</title>
     <link rel="stylesheet" type="text/css" href="css/pg.css">
+    <script src="libs/zepto.js"></script>
+    <script type="text/javascript" src="libs/conSwipe.js"></script>
+    <script src="http://j1.58cdn.com.cn/crop/zt/sp/pugong/jweixin-1.0.0.js"></script>
+    <script src="js/regist.js"></script>
 </head>
 <body>
     <div class="wrap">
@@ -48,7 +52,7 @@
                     </div>
                     <a id="submit" href="javascript:void(0)" class="btn-form green btn-submit">提交</a>
                 </div>
-                <img class="footer" src="img/bm/footer.jpg">
+                <div class="footer" src="img/bm/footer.jpg"></div>
                 <img class="btn-fx" src="img/btn/btn_bg_fx.png">
                 <img class="btn-fx btn-top" src="img/btn/btn_fx.png">
             </div>
@@ -86,9 +90,6 @@
     </div>
 
     <!--<script src="libs/jquery.min.js"></script>-->
-    <script src="libs/zepto.js"></script>
-    <script type="text/javascript" src="libs/conSwipe.js"></script>
-    <script src="http://j1.58cdn.com.cn/crop/zt/sp/pugong/jweixin-1.0.0.js"></script>
-    <script src="js/regist.js"></script>
+
 </body>
 </html>
