--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
                     <img class="boy1 comeInRight" src="img/people/page0-boy.png">
                     <img class="page0-word comeInLeft" src="img/word/page0-word.png">
                     <img class="bg-img fullH fadeIn" src="img/common/bg-line.gif">
-                    <img class="up-icon animated delay10 fadeInHalf" src="img/ele/up.gif">
+                    <div class="animated delay10 fadeInHalf"><img class="up-icon shakeFade" src="img/ele/up.png"></div>
                 </div>
             </div>
-            <!--TODO 位置？-->
             <div class="page page1">
                 <div class="page-img">
                     <img class="page1-badg animated delay08 comeInLeftBounceFast" src="img/people/badgay_little.png">
@@ -77,7 +76,7 @@
                             <img class="page2-word2 animated delay70 comeInLeftFast" src="img/word/page2-word2.png">
                             <img class="hand animated delay70 shakeHand" src="img/ele/hand.png">
                         </div>
-                        <img class="up-icon animated delay80 fadeInHalf" src="img/ele/up.gif">
+                        <img class="up-icon animated delay80 fadeInHalf" src="img/ele/up.png">
                     </div>
                 </div>
             </div>
@@ -94,7 +93,7 @@
                         <img class="hand" src="img/ele/hand.png">
                     </div>
                     <img class="money comeInBottom" src="img/ele/menoy.png">
-                    <img class="up-icon animated delay10 fadeInHalf" src="img/ele/up.gif">
+                    <img class="up-icon animated delay10 fadeInHalf" src="img/ele/up.png">
                 </div>
             </div>
             <div class="page page4">
@@ -111,7 +110,7 @@
                     <div class="outbox animated delay50 fadeInFast">
                         <img class="page4-word2 animated delay50 comeInTopSlow" src="img/word/page4-word2.png">
                     </div>
-                    <img class="up-icon animated delay60 fadeInHalf" src="img/ele/up.gif">
+                    <img class="up-icon animated delay60 fadeInHalf" src="img/ele/up.png">
                 </div>
             </div>
             <div class="page page5">
@@ -135,7 +134,7 @@
                     <img class="paper-text paper-2 animated delay20 fadeIn" src="img/word/paper_2.png">
                     <img class="paper-text paper-3 animated delay30 fadeIn" src="img/word/paper_3.png">
                     <img class="paper-text paper-4 animated delay40 fadeIn" src="img/word/paper_4.png">
-                    <img class="up-icon animated delay50 fadeInHalf" src="img/ele/up.gif">
+                    <img class="up-icon animated delay50 fadeInHalf" src="img/ele/up.png">
                 </div>
             </div>
             <div class="page page7">
