--- a/regist.html
+++ b/regist.html
@@ -68,7 +68,7 @@
         </div>
     </div>
 
-    <div id="blackBox" class="wrap" style="display: none;position: fixed">
+    <div id="blackBox" class="wrap" style="display: none;position: fixed;top: 0">
         <div id="blackmask"></div>
         <div class="pages">
             <div class="pop-cont">
@@ -89,6 +89,7 @@
         </div>
     </div>
 
+    <!--<script src="libs/jquery.min.js"></script>-->
 
 </body>
 </html>
