--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
                         <img class="bg-img" src="img/common/bg-gc.png">
                         <img class="moto2 animated delay40 comeInRight" src="img/common/moto.png">
                         <img class="bg-img animated delay45 comeInTopFast" src="img/common/bg-shadow.png">
-                        <div class="outbox animated delay70 fadeOutFast">
+                        <div class="outbox animated delay80 fadeOutFast">
                             <img class="the-gay animated delay50 comeInRight" src="img/people/badgay_none.png">
                             <img class="page2-word1 animated delay50 comeInLeft" src="img/word/page2-word1.png">
                         </div>
-                        <div class="animated delay70 fadeInFast">
-                            <img class="black-shadow animated delay70 comeInBottomFast" src="img/people/black-shadow.png">
-                            <img class="the-gay animated delay70" src="img/people/badgay_black.png">
-                            <img class="page2-word2 animated delay70 comeInLeftFast" src="img/word/page2-word2.png">
-                            <img class="hand animated delay70 shakeHand" src="img/ele/hand.png">
+                        <div class="animated delay80 fadeInFast">
+                            <img class="black-shadow animated delay80 comeInBottomFast" src="img/people/black-shadow.png">
+                            <img class="the-gay animated delay80" src="img/people/badgay_black.png">
+                            <img class="page2-word2 animated delay80 comeInLeftFast" src="img/word/page2-word2.png">
+                            <img class="hand animated delay80 shakeHand" src="img/ele/hand.png">
                         </div>
-                        <img class="up-icon animated delay80 fadeInHalf" src="img/ele/up.png">
+                        <div class="animated delay90 fadeInHalf"><img class="up-icon shakeFade" src="img/ele/up.png"></div>
                     </div>
                 </div>
             </div>
@@ -93,7 +93,7 @@
                         <img class="hand" src="img/ele/hand.png">
                     </div>
                     <img class="money comeInBottom" src="img/ele/menoy.png">
-                    <img class="up-icon animated delay10 fadeInHalf" src="img/ele/up.png">
+                    <div class="animated delay10 fadeInHalf"><img class="up-icon shakeFade" src="img/ele/up.png"></div>
                 </div>
             </div>
             <div class="page page4">
@@ -110,7 +110,7 @@
                     <div class="outbox animated delay50 fadeInFast">
                         <img class="page4-word2 animated delay50 comeInTopSlow" src="img/word/page4-word2.png">
                     </div>
-                    <img class="up-icon animated delay60 fadeInHalf" src="img/ele/up.png">
+                    <div class="animated delay60 fadeInHalf"><img class="up-icon shakeFade" src="img/ele/up.png"></div>
                 </div>
             </div>
             <div class="page page5">
@@ -134,7 +134,7 @@
                     <img class="paper-text paper-2 animated delay20 fadeIn" src="img/word/paper_2.png">
                     <img class="paper-text paper-3 animated delay30 fadeIn" src="img/word/paper_3.png">
                     <img class="paper-text paper-4 animated delay40 fadeIn" src="img/word/paper_4.png">
-                    <img class="up-icon animated delay50 fadeInHalf" src="img/ele/up.png">
+                    <div class="animated delay50 fadeInHalf"><img class="up-icon shakeFade" src="img/ele/up.png"></div>
                 </div>
             </div>
             <div class="page page7">
