--- a/regist.html
+++ b/regist.html
@@ -58,10 +58,12 @@
             </div>
             <!--报名成功页-->
             <div class="page-bmsuc outbox" style="display: none;">
-                <img class="bm-title" src="img/bm/bm_title.png">
+                <img class="bm-title bm-once" src="img/bm/bm_title.png" style="display: none">
+                <img class="bm-title bm-twice" src="img/bm/bm_title1.png" style="display: none">
                 <img class="bm-city" src="img/bm/bm_city.png">
                 <p class="bmsuc-p">工作人员将会在24小时之内与您联系<br>请保持手机处于开机状态</p>
                 <img class="btn-lslx" src="img/btn/btn_bg_lslx.png">
+                <img class="bm-code" src="img/bm/code.jpg">
                 <img class="btn-lslx btn-top" src="img/btn/btn_lslx.png">
             </div>
 
@@ -88,8 +90,6 @@
             </div>
         </div>
     </div>
-
-    <!--<script src="libs/jquery.min.js"></script>-->
 
 </body>
 </html>
