--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="page page1">
-                <div class="page-img">
+                <div class="page-img animated">
                     <img class="page1-badg animated delay08 comeInLeftBounceFast" src="img/people/badgay_little.png">
                     <img class="moto1 animated delay05 fadeInRightFast" src="img/common/moto.png">
                     <img class="page1-word-left animated delay10 comeInLeftFast" src="img/word/page1-word-left.png">
