--- a/index.html
+++ b/index.html
@@ -50,6 +50,35 @@
                     </div>
                 </div>
             </div>
+            <div class="page page2">
+                <div class="page-img">
+                    <div class="animated delay40 fadeOutFast">
+                        <img class="bg_city transCityL2R" src="img/common/bg_city.png">
+                        <img class="white-line" src="img/common/white-line.gif">
+                        <img class="page2-word scaleLoud" src="img/word/page2-word.png">
+                        <img class="bg-img top-rotate fadeIn" src="img/common/bg-line.gif">
+                        <div class="outbox animated transCarR2L">
+                            <img class="moto2 shakeY" src="img/common/moto.png">
+                        </div>
+                    </div>
+                    <div class="animated delay40 fadeInFast">
+                        <img class="bg-img" src="img/common/bg-gc.png">
+                        <img class="moto2 animated delay40 comeInRight" src="img/common/moto.png">
+                        <img class="bg-img animated delay45 comeInTopFast" src="img/common/bg-shadow.png">
+                        <div class="outbox animated delay80 fadeOutFast">
+                            <img class="the-gay animated delay50 comeInRight" src="img/people/badgay_none.png">
+                            <img class="page2-word1 animated delay50 comeInLeft" src="img/word/page2-word1.png">
+                        </div>
+                        <div class="animated delay80 fadeInFast">
+                            <img class="black-shadow animated delay80 comeInBottomFast" src="img/people/black-shadow.png">
+                            <img class="the-gay animated delay80" src="img/people/badgay_black.png">
+                            <img class="page2-word2 animated delay80 comeInLeftFast" src="img/word/page2-word2.png">
+                            <img class="hand animated delay80 shakeHand" src="img/ele/hand.png">
+                        </div>
+                        <div class="animated delay90 fadeInHalf"><img class="up-icon shakeFade" src="img/ele/up.png"></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
